[tool.poetry]
name = "masteringpytorch2-environment"
version = "0.1.0"
description = "masteringpytorch2 environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "3.10.16"

[tool.poetry.group.util.dependencies]
tqdm = "4.66.3"
tenacity = "8.2.2"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "3.6.8"
notebook = "6.5.7"
nbconvert = "7.16.6"
ipywidgets = "8.1.6"

[tool.poetry.group.data.dependencies]
polars = "1.17.1"
pandas = "2.2.2"

[tool.poetry.group.calculation.dependencies]
numpy = "1.26.4"
scipy = "1.13.1"
statsmodels = "0.14.4"
shapely = "2.0.6"

[tool.poetry.group.nlp.dependencies]
nltk = "3.9.1"
gensim = "4.3.3"

[tool.poetry.group.ml.dependencies]
scikit-learn = "1.6.1"

[tool.poetry.group.plot.dependencies]
matplotlib = "3.8.4"
plotly = "5.24.1"
seaborn = "0.13.2"
missingno = "0.5.2"
graphviz = "0.20.3"

[tool.poetry.group.pytorch.dependencies]
torch = { version = "2.2.2+cu121", source="pytorch"}
torchaudio = { version = "2.2.2+cu121", source="pytorch"}
torchvision = { version = "0.17.2+cu121", source="pytorch"}
torchdata = { version = "0.7.1", source="pytorch"}
torchtext = [
    {url="https://download.pytorch.org/whl/cpu/torchtext-0.17.2%2Bcpu-cp310-cp310-win_amd64.whl#sha256=3d9b86fc130c6c00f98c2ec3e36b0c1a96dc966f3e37bcf147ee1124bb2d7bfe", markers = "sys_platform == 'win32'"},
    {url="https://download.pytorch.org/whl/cpu/torchtext-0.17.2%2Bcpu-cp310-cp310-linux_x86_64.whl#sha256=3f829a58ee5d971451af1ff4810f36a95fe9beec717eb37c68f4b2f3eb532b02", markers = "sys_platform == 'linux'"},
    {url="https://download.pytorch.org/whl/cpu/torchtext-0.17.2-cp310-cp310-macosx_11_0_arm64.whl#sha256=84b8b907f6bfbf637ea80521060c8800d3b9f5a5b4ba2daf88ce0f6e728dafa0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    {url="https://download.pytorch.org/whl/cpu/torchtext-0.17.2-cp310-cp310-macosx_10_13_x86_64.whl#sha256=760ef1464ffe72c5a25f53617b011afeb31641f0ad016479b96d151d2acd8396", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
]

[tool.poetry.group.pytorch-utils.dependencies]
torchviz = "0.0.3"

[tool.poetry.group.tensorflow.dependencies]
tensorflow-cpu = "2.14.1"

[tool.poetry.group.tensorboard.dependencies]
tensorboard = "2.14.1"

[tool.poetry.group.book.dependencies]
librosa = "0.10.2"
opencv-python = "4.11.0.86"

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
