[tool.poetry]
name = "masteringpytorch2-environment"
version = "0.1.0"
description = "masteringpytorch2 environment"
authors = ["Nick Mazurkin <mazurkin@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "3.10.16"

[tool.poetry.group.util.dependencies]
tqdm = "4.66.3"
tenacity = "8.2.2"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "3.6.8"
notebook = "6.5.7"
nbconvert = "7.16.6"
ipywidgets = "8.1.6"

[tool.poetry.group.data.dependencies]
polars = "1.17.1"
pandas = "2.2.2"

[tool.poetry.group.calculation.dependencies]
numpy = "1.26.4"
scipy = "1.13.1"
statsmodels = "0.14.4"
shapely = "2.0.6"

[tool.poetry.group.nlp.dependencies]
nltk = "3.9.1"
gensim = "4.3.3"

[tool.poetry.group.ml.dependencies]
scikit-learn = "1.6.1"

[tool.poetry.group.plot.dependencies]
matplotlib = "3.8.4"
plotly = "5.24.1"
seaborn = "0.13.2"
missingno = "0.5.2"
graphviz = "0.20.3"

[tool.poetry.group.pytorch.dependencies]
torch = { version = "2.2.2+cu121", source="pytorch"}
torchaudio = { version = "2.2.2+cu121", source="pytorch"}
torchvision = { version = "0.17.2+cu121", source="pytorch"}
torchdata = { version = "0.7.1", source="pytorch"}
torchtext = "0.17.2"

[tool.poetry.group.pytorch-utils.dependencies]
torchviz = "0.0.3"

[tool.poetry.group.tensorflow.dependencies]
tensorflow-cpu = "2.14.1"

[tool.poetry.group.tensorboard.dependencies]
tensorboard = "2.14.1"

[tool.poetry.group.book.dependencies]
librosa = "0.10.2"
opencv-python = "4.11.0.86"

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
